--- a/Letter Recognition ANN.ipynb
+++ b/Letter Recognition ANN.ipynb
@@ -28,28 +28,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-633a1f028d12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://archive.ics.uci.edu/ml/machine-learning-databases/letter-recognition/letter-recognition.data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/newowner/anaconda/lib/python3.5/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   3079\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3080\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3081\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3082\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3083\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'sort'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19999    A\n",
+      "1027     A\n",
+      "11108    A\n",
+      "1030     A\n",
+      "19420    A\n",
+      "7566     A\n",
+      "7582     A\n",
+      "11094    A\n",
+      "1041     A\n",
+      "1042     A\n",
+      "7608     A\n",
+      "15583    A\n",
+      "7612     A\n",
+      "15582    A\n",
+      "15575    A\n",
+      "7641     A\n",
+      "1062     A\n",
+      "11069    A\n",
+      "7752     A\n",
+      "13566    A\n",
+      "7749     A\n",
+      "7746     A\n",
+      "7696     A\n",
+      "7693     A\n",
+      "19423    A\n",
+      "7691     A\n",
+      "18083    A\n",
+      "1077     A\n",
+      "3360     A\n",
+      "7657     A\n",
+      "        ..\n",
+      "9793     Z\n",
+      "5643     Z\n",
+      "5647     Z\n",
+      "18929    Z\n",
+      "14287    Z\n",
+      "14289    Z\n",
+      "14297    Z\n",
+      "5685     Z\n",
+      "1882     Z\n",
+      "13144    Z\n",
+      "18953    Z\n",
+      "5728     Z\n",
+      "5910     Z\n",
+      "1859     Z\n",
+      "9756     Z\n",
+      "5749     Z\n",
+      "11622    Z\n",
+      "5771     Z\n",
+      "14313    Z\n",
+      "18972    Z\n",
+      "16628    Z\n",
+      "5823     Z\n",
+      "11627    Z\n",
+      "14331    Z\n",
+      "5843     Z\n",
+      "5868     Z\n",
+      "16594    Z\n",
+      "5906     Z\n",
+      "1853     Z\n",
+      "9712     Z\n",
+      "Name: letter, Length: 20000, dtype: object\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/letter-recognition/letter-recognition.data', header=None)\n",
-    "print(df.sort([0]))"
+    "\n",
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/letter-recognition/letter-recognition.data'\n",
+    "df = pd.read_csv(url, header=None)\n",
+    "df = df.sort_values([0]).rename(index=str, columns={0:\"letter\", 1:\"x-pos\", 2:\"y-pos\", 3:\"width\", 4:\"height\", 5:\"numPixels\", 6:\"meanXPixels\", 7:\"meanYPixels\", 8:\"meanXVar\", 9:\"meanYVar\", 10:\"meanXYCor\", 11:\"meanXXY\", 12:\"meanXYY\", 13:\"meanEdgeCnt\", 14:\"xEdgCorr\", 15:\"meanYEdge\", 16:\"yEdgeCorr\"})\n",
+    "\n",
+    "def parseLetterToInt(x):\n",
+    "    return {\n",
+    "        'A': 1,\n",
+    "        'B': 2,\n",
+    "        'C': 3,\n",
+    "        'D': 4,\n",
+    "        'E': 5,\n",
+    "        'F': 6,\n",
+    "        'G': 7,\n",
+    "        'H': 8,\n",
+    "        'I': 9,\n",
+    "        'J': 10,\n",
+    "        'K': 11,\n",
+    "        'L': 12,\n",
+    "        'M': 13,\n",
+    "        'N': 14,\n",
+    "        'O': 15,\n",
+    "        'P': 16,\n",
+    "        'Q': 17,\n",
+    "        'R': 18,\n",
+    "        'S': 19,\n",
+    "        'T': 20,\n",
+    "        'U': 21,\n",
+    "        'V': 22,\n",
+    "        'W': 23,\n",
+    "        'X': 24,\n",
+    "        'Y': 25,\n",
+    "        'Z': 26\n",
+    "    }[x]\n",
+    "\n",
+    "letterSeries = df.loc[:, \"letter\"]\n",
+    "print(letterSeries)\n",
+    "# for row in letterSeries:\n",
+    "#     row = parseLetterToInt(row)\n",
+    "#     print(row)\n",
+    "\n",
+    "# for row in df.loc[:, \"letter\"]:\n",
+    "#     letterToInt = parseLetterToInt(row)\n",
+    "#     row = letterToInt\n",
+    "#     print(row)\n",
+    "\n",
+    "# for index, row in df.iterrows():\n",
+    "# #     letter = row['letter']\n",
+    "# #     letterToInt = parseLetterToInt(letter)\n",
+    "# #     row['letter'] = letterToInt\n",
+    "    \n",
+    "#     range_max = max(row)\n",
+    "#     row = row / range_max\n",
+    "    \n",
+    "# # print(df.columns[0])\n",
+    "\n",
+    "# print(df)\n",
+    "\n",
+    "\n",
+    "# num_df_inputs = len(df.columns[1:])\n",
+    "# print(num_df_inputs)"
    ]
   },
   {
@@ -59,7 +174,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "learning_rates = [0.5,0.1,0.01,0.001]\n",
+    "epochs = 10"
+   ]
   }
  ],
  "metadata": {
