Implementing Brownlee perceptron for HW3

--- a/Letter Recognition ANN.ipynb
+++ b/Letter Recognition ANN.ipynb
@@ -232,6 +232,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "letters = [\n",
     "    'A',\n",
@@ -305,8 +306,56 @@
    },
    "outputs": [],
    "source": [
+    "from math import exp\n",
+    "\n",
     "learning_rates = [0.5,0.1,0.01,0.001]\n",
-    "epochs = 10"
+    "epochs = 10\n",
+    "\n",
+    "# Calculate neuron activation for input\n",
+    "def activate(weights, inputs):\n",
+    "    activation = weights[-1]\n",
+    "    for i in range(len(weights) - 1):\n",
+    "        activation += weights[i] * inputs[i]\n",
+    "    return activation\n",
+    "\n",
+    "\n",
+    "# Transfer neuron activation implements logistic function (sigmoid)\n",
+    "def transfer(activation):\n",
+    "    return 1.0 / (1.0 + exp(-activation))\n",
+    "\n",
+    "# Calculate derivative of neuron output\n",
+    "def transfer_derivative(output):\n",
+    "    return output * (1.0 - output)\n",
+    "\n",
+    "# Backpropagate error and store in neurons\n",
+    "def backward_propagate_error(network, expected):\n",
+    "    for i in reversed(range(len(network))):\n",
+    "        layer = network[i]\n",
+    "        errors = list()\n",
+    "        if i != len(network) - 1:\n",
+    "            for j in range(len(layer)):\n",
+    "                error = 0.0\n",
+    "                for neuron in network[i + 1]:\n",
+    "                    error += (neuron['weights'][j] * neuron['delta'])\n",
+    "                errors.append(error)\n",
+    "        else:\n",
+    "            for j in range(len(layer)):\n",
+    "                neuron = layer[j]\n",
+    "                errors.append(expected[j] - neuron['output'])\n",
+    "        for j in range(len(layer)):\n",
+    "            neuron = layer[j]\n",
+    "            \n",
+    "\n",
+    "def forward_propagate(network, row):\n",
+    "    inputs = row\n",
+    "    for layer in network:\n",
+    "        new_inputs = []\n",
+    "        for neuron in layer:\n",
+    "            activation = activate(neuron['weights'], inputs)\n",
+    "            neuron['output'] = transfer(activation)\n",
+    "            new_inputs.append(neuron['output'])\n",
+    "        inputs = new_inputs\n",
+    "    return inputs"
    ]
   }
  ],
