Added SVM and Logistic Regression classifiers

--- a/Letter Recognition ANN.ipynb
+++ b/Letter Recognition ANN.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -37,196 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       letter     x-pos     y-pos     width    height  numPixels  meanXPixels  \\\n",
-      "19999       1  0.266667  0.600000  0.400000  0.400000   0.133333     0.600000   \n",
-      "1027        1  0.200000  0.400000  0.333333  0.266667   0.066667     0.466667   \n",
-      "11108       1  0.333333  0.600000  0.400000  0.466667   0.466667     0.533333   \n",
-      "1030        1  0.266667  0.666667  0.466667  0.466667   0.333333     0.466667   \n",
-      "19420       1  0.266667  0.600000  0.466667  0.466667   0.333333     0.533333   \n",
-      "7566        1  0.266667  0.600000  0.466667  0.400000   0.200000     0.800000   \n",
-      "7582        1  0.266667  0.333333  0.400000  0.466667   0.133333     0.466667   \n",
-      "11094       1  0.200000  0.133333  0.333333  0.200000   0.133333     0.400000   \n",
-      "1041        1  0.133333  0.466667  0.266667  0.333333   0.133333     0.800000   \n",
-      "1042        1  0.200000  0.266667  0.400000  0.400000   0.133333     0.600000   \n",
-      "7608        1  0.133333  0.133333  0.266667  0.200000   0.066667     0.400000   \n",
-      "15583       1  0.266667  0.733333  0.466667  0.533333   0.400000     0.666667   \n",
-      "7612        1  0.133333  0.333333  0.266667  0.266667   0.133333     0.733333   \n",
-      "15582       1  0.200000  0.533333  0.400000  0.333333   0.133333     0.533333   \n",
-      "15575       1  0.133333  0.333333  0.266667  0.266667   0.133333     0.666667   \n",
-      "7641        1  0.266667  0.600000  0.400000  0.466667   0.266667     0.533333   \n",
-      "1062        1  0.466667  0.866667  0.466667  0.466667   0.266667     0.800000   \n",
-      "11069       1  0.266667  0.666667  0.466667  0.466667   0.133333     0.333333   \n",
-      "7752        1  0.266667  0.666667  0.400000  0.533333   0.266667     0.866667   \n",
-      "13566       1  0.400000  0.600000  0.400000  0.266667   0.200000     0.733333   \n",
-      "7749        1  0.133333  0.266667  0.266667  0.200000   0.066667     0.533333   \n",
-      "7746        1  0.066667  0.066667  0.133333  0.066667   0.066667     0.466667   \n",
-      "7696        1  0.133333  0.200000  0.200000  0.066667   0.066667     0.466667   \n",
-      "7693        1  0.200000  0.333333  0.400000  0.266667   0.133333     0.466667   \n",
-      "19423       1  0.266667  0.600000  0.400000  0.466667   0.400000     0.533333   \n",
-      "7691        1  0.266667  0.466667  0.400000  0.333333   0.200000     0.600000   \n",
-      "18083       1  0.333333  0.666667  0.466667  0.533333   0.333333     0.466667   \n",
-      "1077        1  0.200000  0.466667  0.333333  0.333333   0.200000     0.733333   \n",
-      "3360        1  0.400000  0.800000  0.400000  0.400000   0.200000     0.866667   \n",
-      "7657        1  0.133333  0.200000  0.266667  0.133333   0.066667     0.666667   \n",
-      "...       ...       ...       ...       ...       ...        ...          ...   \n",
-      "9793       26  0.133333  0.400000  0.266667  0.266667   0.133333     0.533333   \n",
-      "5643       26  0.466667  0.600000  0.466667  0.333333   0.266667     0.600000   \n",
-      "5647       26  0.333333  0.600000  0.466667  0.466667   0.400000     0.666667   \n",
-      "18929      26  0.200000  0.333333  0.400000  0.266667   0.200000     0.466667   \n",
-      "14287      26  0.333333  0.600000  0.400000  0.466667   0.200000     0.466667   \n",
-      "14289      26  0.333333  0.333333  0.400000  0.533333   0.200000     0.466667   \n",
-      "14297      26  0.200000  0.466667  0.266667  0.333333   0.266667     0.600000   \n",
-      "5685       26  0.200000  0.266667  0.333333  0.400000   0.266667     0.600000   \n",
-      "1882       26  0.200000  0.533333  0.333333  0.400000   0.200000     0.533333   \n",
-      "13144      26  0.400000  0.733333  0.533333  0.533333   0.333333     0.600000   \n",
-      "18953      26  0.133333  0.266667  0.333333  0.200000   0.133333     0.533333   \n",
-      "5728       26  0.133333  0.333333  0.266667  0.266667   0.133333     0.466667   \n",
-      "5910       26  0.400000  0.666667  0.600000  0.466667   0.333333     0.466667   \n",
-      "1859       26  0.333333  0.333333  0.400000  0.533333   0.200000     0.466667   \n",
-      "9756       26  0.266667  0.266667  0.333333  0.400000   0.133333     0.466667   \n",
-      "5749       26  0.266667  0.533333  0.400000  0.400000   0.400000     0.533333   \n",
-      "11622      26  0.200000  0.533333  0.266667  0.400000   0.200000     0.533333   \n",
-      "5771       26  0.133333  0.266667  0.266667  0.133333   0.133333     0.466667   \n",
-      "14313      26  0.333333  0.666667  0.400000  0.533333   0.400000     0.600000   \n",
-      "18972      26  0.266667  0.400000  0.333333  0.266667   0.200000     0.466667   \n",
-      "16628      26  0.266667  0.666667  0.333333  0.533333   0.200000     0.466667   \n",
-      "5823       26  0.200000  0.133333  0.266667  0.266667   0.200000     0.466667   \n",
-      "11627      26  0.133333  0.466667  0.200000  0.333333   0.200000     0.400000   \n",
-      "14331      26  0.333333  0.600000  0.333333  0.266667   0.200000     0.400000   \n",
-      "5843       26  0.200000  0.266667  0.266667  0.400000   0.133333     0.466667   \n",
-      "5868       26  0.200000  0.600000  0.266667  0.400000   0.200000     0.466667   \n",
-      "16594      26  0.200000  0.333333  0.266667  0.466667   0.133333     0.466667   \n",
-      "5906       26  0.400000  0.600000  0.533333  0.466667   0.333333     0.466667   \n",
-      "1853       26  0.400000  0.600000  0.533333  0.466667   0.266667     0.600000   \n",
-      "9712       26  0.133333  0.133333  0.200000  0.200000   0.133333     0.466667   \n",
-      "\n",
-      "       meanYPixels  meanXVar  meanYVar  meanXYCor   meanXXY   meanXYY  \\\n",
-      "19999     0.333333  0.200000  0.066667   0.533333  0.066667  0.533333   \n",
-      "1027      0.333333  0.200000  0.066667   0.400000  0.066667  0.533333   \n",
-      "11108     0.533333  0.533333  0.266667   0.400000  0.400000  0.533333   \n",
-      "1030      0.333333  0.133333  0.200000   0.333333  0.133333  0.400000   \n",
-      "19420     0.333333  0.133333  0.266667   0.400000  0.066667  0.333333   \n",
-      "7566      0.133333  0.266667  0.200000   0.733333  0.066667  0.600000   \n",
-      "7582      0.266667  0.200000  0.066667   0.466667  0.066667  0.533333   \n",
-      "11094     0.133333  0.133333  0.133333   0.333333  0.133333  0.533333   \n",
-      "1041      0.133333  0.266667  0.200000   0.733333  0.133333  0.600000   \n",
-      "1042      0.200000  0.200000  0.200000   0.533333  0.133333  0.600000   \n",
-      "7608      0.133333  0.133333  0.133333   0.333333  0.133333  0.533333   \n",
-      "15583     0.200000  0.066667  0.133333   0.533333  0.200000  0.600000   \n",
-      "7612      0.200000  0.200000  0.133333   0.666667  0.133333  0.600000   \n",
-      "15582     0.333333  0.200000  0.066667   0.466667  0.066667  0.533333   \n",
-      "15575     0.133333  0.133333  0.133333   0.600000  0.133333  0.600000   \n",
-      "7641      0.133333  0.066667  0.133333   0.400000  0.133333  0.533333   \n",
-      "1062      0.200000  0.400000  0.133333   0.800000  0.133333  0.666667   \n",
-      "11069     0.333333  0.200000  0.066667   0.333333  0.066667  0.466667   \n",
-      "7752      0.133333  0.266667  0.200000   0.733333  0.066667  0.600000   \n",
-      "13566     0.000000  0.266667  0.066667   0.733333  0.333333  0.866667   \n",
-      "7749      0.133333  0.133333  0.133333   0.466667  0.133333  0.533333   \n",
-      "7746      0.266667  0.133333  0.066667   0.466667  0.066667  0.533333   \n",
-      "7696      0.133333  0.133333  0.066667   0.400000  0.133333  0.466667   \n",
-      "7693      0.066667  0.133333  0.133333   0.400000  0.133333  0.466667   \n",
-      "19423     0.400000  0.400000  0.266667   0.466667  0.400000  0.600000   \n",
-      "7691      0.200000  0.133333  0.133333   0.533333  0.066667  0.533333   \n",
-      "18083     0.200000  0.133333  0.200000   0.266667  0.133333  0.466667   \n",
-      "1077      0.133333  0.133333  0.133333   0.600000  0.133333  0.600000   \n",
-      "3360      0.066667  0.333333  0.133333   0.800000  0.133333  0.666667   \n",
-      "7657      0.133333  0.200000  0.133333   0.666667  0.133333  0.666667   \n",
-      "...            ...       ...       ...        ...       ...       ...   \n",
-      "9793      0.466667  0.133333  0.600000   0.733333  0.333333  0.600000   \n",
-      "5643      0.266667  0.200000  0.533333   0.800000  0.333333  0.666667   \n",
-      "5647      0.600000  0.400000  0.266667   0.466667  0.333333  0.533333   \n",
-      "18929     0.466667  0.133333  0.666667   0.800000  0.400000  0.533333   \n",
-      "14287     0.466667  0.266667  1.000000   0.600000  0.400000  0.533333   \n",
-      "14289     0.466667  0.266667  1.000000   0.600000  0.400000  0.533333   \n",
-      "14297     0.600000  0.333333  0.200000   0.466667  0.333333  0.466667   \n",
-      "5685      0.466667  0.333333  0.333333   0.600000  0.200000  0.400000   \n",
-      "1882      0.466667  0.133333  0.600000   0.733333  0.333333  0.600000   \n",
-      "13144     0.400000  0.200000  0.666667   0.800000  0.266667  0.533333   \n",
-      "18953     0.466667  0.133333  0.600000   0.800000  0.400000  0.533333   \n",
-      "5728      0.533333  0.133333  0.666667   0.800000  0.466667  0.466667   \n",
-      "5910      0.533333  0.200000  0.666667   0.800000  0.466667  0.400000   \n",
-      "1859      0.466667  0.266667  1.000000   0.600000  0.400000  0.533333   \n",
-      "9756      0.466667  0.266667  1.000000   0.600000  0.400000  0.533333   \n",
-      "5749      0.533333  0.133333  0.533333   0.466667  0.400000  0.466667   \n",
-      "11622     0.466667  0.200000  0.800000   0.600000  0.400000  0.533333   \n",
-      "5771      0.466667  0.133333  0.600000   0.800000  0.400000  0.533333   \n",
-      "14313     0.400000  0.333333  0.600000   0.533333  0.333333  0.466667   \n",
-      "18972     0.466667  0.133333  0.600000   0.733333  0.400000  0.533333   \n",
-      "16628     0.466667  0.266667  1.000000   0.600000  0.400000  0.533333   \n",
-      "5823      0.466667  0.333333  0.600000   0.400000  0.400000  0.533333   \n",
-      "11627     0.533333  0.333333  0.666667   0.466667  0.400000  0.666667   \n",
-      "14331     0.466667  0.133333  0.533333   0.733333  0.533333  0.600000   \n",
-      "5843      0.466667  0.266667  0.933333   0.600000  0.400000  0.533333   \n",
-      "5868      0.466667  0.200000  0.800000   0.600000  0.400000  0.533333   \n",
-      "16594     0.466667  0.266667  0.933333   0.666667  0.400000  0.533333   \n",
-      "5906      0.466667  0.133333  0.600000   0.800000  0.400000  0.533333   \n",
-      "1853      0.400000  0.200000  0.666667   0.733333  0.266667  0.600000   \n",
-      "9712      0.466667  0.333333  0.600000   0.400000  0.400000  0.533333   \n",
-      "\n",
-      "       meanEdgeCnt  xEdgCorr  meanYEdge  yEdgeCorr  \n",
-      "19999     0.133333  0.466667   0.133333   0.533333  \n",
-      "1027      0.133333  0.466667   0.133333   0.466667  \n",
-      "11108     0.200000  0.533333   0.533333   0.266667  \n",
-      "1030      0.200000  0.466667   0.266667   0.266667  \n",
-      "19420     0.200000  0.333333   0.266667   0.333333  \n",
-      "7566      0.200000  0.466667   0.200000   0.600000  \n",
-      "7582      0.200000  0.466667   0.133333   0.533333  \n",
-      "11094     0.133333  0.400000   0.133333   0.400000  \n",
-      "1041      0.133333  0.400000   0.200000   0.600000  \n",
-      "1042      0.200000  0.400000   0.200000   0.600000  \n",
-      "7608      0.133333  0.400000   0.133333   0.400000  \n",
-      "15583     0.333333  0.333333   0.200000   0.466667  \n",
-      "7612      0.133333  0.400000   0.133333   0.533333  \n",
-      "15582     0.133333  0.466667   0.133333   0.533333  \n",
-      "15575     0.133333  0.400000   0.133333   0.533333  \n",
-      "7641      0.133333  0.466667   0.200000   0.400000  \n",
-      "1062      0.333333  0.200000   0.266667   0.666667  \n",
-      "11069     0.200000  0.466667   0.133333   0.466667  \n",
-      "7752      0.200000  0.466667   0.266667   0.666667  \n",
-      "13566     0.266667  0.333333   0.266667   0.733333  \n",
-      "7749      0.133333  0.400000   0.133333   0.466667  \n",
-      "7746      0.133333  0.400000   0.066667   0.466667  \n",
-      "7696      0.066667  0.400000   0.066667   0.466667  \n",
-      "7693      0.266667  0.400000   0.266667   0.466667  \n",
-      "19423     0.333333  0.533333   0.466667   0.200000  \n",
-      "7691      0.133333  0.400000   0.200000   0.466667  \n",
-      "18083     0.133333  0.400000   0.133333   0.400000  \n",
-      "1077      0.200000  0.400000   0.200000   0.600000  \n",
-      "3360      0.133333  0.200000   0.133333   0.666667  \n",
-      "7657      0.133333  0.400000   0.133333   0.533333  \n",
-      "...            ...       ...        ...        ...  \n",
-      "9793      0.066667  0.533333   0.333333   0.533333  \n",
-      "5643      0.200000  0.533333   0.400000   0.533333  \n",
-      "5647      0.200000  0.533333   0.666667   0.466667  \n",
-      "18929     0.066667  0.533333   0.400000   0.533333  \n",
-      "14287     0.000000  0.533333   0.533333   0.533333  \n",
-      "14289     0.000000  0.533333   0.533333   0.533333  \n",
-      "14297     0.200000  0.533333   0.600000   0.266667  \n",
-      "5685      0.133333  0.400000   0.400000   0.466667  \n",
-      "1882      0.066667  0.533333   0.400000   0.533333  \n",
-      "13144     0.133333  0.466667   0.400000   0.533333  \n",
-      "18953     0.066667  0.533333   0.333333   0.533333  \n",
-      "5728      0.066667  0.533333   0.333333   0.400000  \n",
-      "5910      0.066667  0.533333   0.400000   0.466667  \n",
-      "1859      0.000000  0.533333   0.533333   0.533333  \n",
-      "9756      0.000000  0.533333   0.533333   0.533333  \n",
-      "5749      0.000000  0.533333   0.600000   0.533333  \n",
-      "11622     0.000000  0.533333   0.466667   0.466667  \n",
-      "5771      0.066667  0.533333   0.333333   0.466667  \n",
-      "14313     0.066667  0.466667   0.466667   0.533333  \n",
-      "18972     0.066667  0.600000   0.400000   0.533333  \n",
-      "16628     0.000000  0.533333   0.533333   0.533333  \n",
-      "5823      0.066667  0.533333   0.466667   0.533333  \n",
-      "11627     0.066667  0.600000   0.533333   0.466667  \n",
-      "14331     0.200000  0.533333   0.333333   0.333333  \n",
-      "5843      0.000000  0.533333   0.533333   0.533333  \n",
-      "5868      0.000000  0.533333   0.466667   0.533333  \n",
-      "16594     0.000000  0.533333   0.533333   0.533333  \n",
-      "5906      0.066667  0.600000   0.400000   0.533333  \n",
-      "1853      0.066667  0.466667   0.400000   0.533333  \n",
-      "9712      0.133333  0.533333   0.466667   0.533333  \n",
-      "\n",
-      "[20000 rows x 17 columns]\n"
+      "[1.0, 0.26666666666666666, 0.6, 0.4, 0.4, 0.13333333333333333, 0.6, 0.3333333333333333, 0.2, 0.06666666666666667, 0.5333333333333333, 0.06666666666666667, 0.5333333333333333, 0.13333333333333333, 0.4666666666666667, 0.13333333333333333, 0.5333333333333333]\n"
      ]
     }
    ],
@@ -292,21 +103,31 @@
     "    df['yEdgeCorr'].replace(i, i / max(df['yEdgeCorr']), inplace=True)\n",
     "                     \n",
     "\n",
-    "    \n",
-    "print(df)\n",
+    "letters_input = df.values.tolist()\n",
+    "print(letters_input[0])\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'weights': [0.13436424411240122, 0.8474337369372327, 0.763774618976614], 'output': 0.7105668883115941, 'delta': -0.0005348048046610517}]\n",
+      "[{'weights': [0.2550690257394217, 0.49543508709194095], 'output': 0.6213859615555266, 'delta': -0.14619064683582808}, {'weights': [0.4494910647887381, 0.651592972722763], 'output': 0.6573693455986976, 'delta': 0.0771723774346327}]\n"
+     ]
+    }
+   ],
    "source": [
     "from math import exp\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "learning_rates = [0.5,0.1,0.01,0.001]\n",
     "epochs = 10\n",
@@ -344,7 +165,7 @@
     "                errors.append(expected[j] - neuron['output'])\n",
     "        for j in range(len(layer)):\n",
     "            neuron = layer[j]\n",
-    "            \n",
+    "            neuron['delta'] = errors[j] * transfer_derivative(neuron['output'])\n",
     "\n",
     "def forward_propagate(network, row):\n",
     "    inputs = row\n",
@@ -355,8 +176,90 @@
     "            neuron['output'] = transfer(activation)\n",
     "            new_inputs.append(neuron['output'])\n",
     "        inputs = new_inputs\n",
-    "    return inputs"
+    "    return inputs\n",
+    "\n",
+    "# test backpropagation of error\n",
+    "network = [[{'output': 0.7105668883115941, 'weights': [0.13436424411240122, 0.8474337369372327, 0.763774618976614]}],\n",
+    "\t\t[{'output': 0.6213859615555266, 'weights': [0.2550690257394217, 0.49543508709194095]}, {'output': 0.6573693455986976, 'weights': [0.4494910647887381, 0.651592972722763]}]]\n",
+    "expected = [0, 1]\n",
+    "backward_propagate_error(network, expected)\n",
+    "for layer in network:\n",
+    "\tprint(layer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 2]\n",
+      " [1 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "expected = [1, 1, 0, 1, 0, 0, 1, 0, 0, 0]\n",
+    "predicted = [1, 0, 0, 1, 0, 0, 1, 1, 1, 0]\n",
+    "results = confusion_matrix(expected, predicted)\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13  0  0]\n",
+      " [ 0 15  1]\n",
+      " [ 0  3  6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import datasets\n",
+    "from sklearn.metrics import confusion_matrix \n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "\n",
+    "# loading the iris dataset \n",
+    "iris = datasets.load_iris() \n",
+    "  \n",
+    "# X -> features, y -> label \n",
+    "X = iris.data \n",
+    "y = iris.target \n",
+    "  \n",
+    "# dividing X, y into train and test data \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 0) \n",
+    "  \n",
+    "# training a DescisionTreeClassifier \n",
+    "from sklearn.tree import DecisionTreeClassifier \n",
+    "dtree_model = DecisionTreeClassifier(max_depth = 2).fit(X_train, y_train) \n",
+    "dtree_predictions = dtree_model.predict(X_test) \n",
+    "  \n",
+    "# creating a confusion matrix \n",
+    "cm = confusion_matrix(y_test, dtree_predictions) \n",
+    "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
